- TODO arena patchouli
- TODO press alt to show blacklist/whitelist

2.4.17
- Add config to allow player summoned entities to have levels and traits
- Make effect ambient

2.4.16
- Add more advancements
- Fix Curse of Pride text
- Nameplate render offset
- Fix EnigmaticLegacy compat

2.4.15
- Fix hostility orb not added to player inventory when inventory is full
- Double Curse of Gluttony default drop rate
- Half Hostility essence cost
- Change recipes

2.4.14
- Add event to teleport
- Growth trait slimes won't suffocate
- Fix Rank 0 trait
- Add config to disable entity specific data
- Add Arena effect icon
- Add Ice and Fire dragon default traits
- Add Ars Nouveau enchantment recipe

2.4.13
- Fix more textures
- Fix Drain crash
- Sealed item can still put on curios slot
- Drowned has higher chance to wield trident
- Fix mob drop insane amount of experience
- Add new levels of progression
- Change spawner level bonus from additive to multiplicative
- Prevent creepers from spawning in hostility spawner
- Add Ancient remnant compat
- Add Bosses of Mass Destruction compat
- Add new loot condition for modpack drop display
- Allow whitelist and blacklist to be used together

2.4.12
- add Pocket of Restoration
- Gravity Trait
- Moonwalk Trait
- Counter Strike Trait
- Pulling Trait
- Reprint Trait
- Arena Trait
- make hostility orb to 5x5x5
- Equipment wand can open curios page as well
- Fix difficulty calculation
- Improve difficulty display: add tooltip detail
- Curse of Gluttony drops multiple bottles now
- add Soul Bound to dispell whitelist
- add Envy, Greed, Sloth, Lust, Gluttony to Ragnarok whitelist
- add max level for players
- all curio items cannot have duplicates equipped
- add Alex Caves compat
- add Ice and Fire compat
- Thorn no longer inflict trait effects
- Slimes reduce hostility loot drop rate when split
- Cataclysm mobs have default curios now
- Add individual range config for area effect traits
- Make some recipes cheaper

2.4.11
- add 9 curio items