@@ -215,6 +215,7 @@
   "l2hostility.tooltip.disable": "˙ɥsıuɐʌ ןןıʍ ʇuǝɯʇuɐɥɔuǝ ʍǝu ʎuⱯ ˙%ss ɹoɟ pǝןqɐsıp sʇuǝɯʇuɐɥɔuǝ %s",
   "l2hostility.tooltip.legendary": "ʎɹɐpuǝbǝꞀ",
   "l2hostility.tooltip.level_cost": "%s :ʇsoɔ ןǝʌǝן qoW",
+  "l2hostility.tooltip.lv": "%s˙ʌꞀ",
   "l2hostility.tooltip.min_level": "%s :ןǝʌǝן qoɯ ɯnɯıuıW",
   "l2hostility.tooltip.seal_time": "˙%ss sǝʞɐ⟘ ˙ןɐǝsun oʇ ǝsn pןoH",
   "l2hostility.tooltip.sealed_item": ":uıɥʇıʍ pǝןɐǝs ɯǝʇI",
