@@ -1,0 +1,8 @@
+{
+  "values": [
+    {
+      "id": "twilightforest:death_tome",
+      "required": false
+    }
+  ]
+}
